@@ -1,0 +1,28 @@
+# Configure @PROJECT_INTERN_NAME@
+#
+# Set
+#  @PROJECT_INTERN_NAME@_FOUND = 1
+#  @PROJECT_INTERN_NAME@_INCLUDE_DIRS = /usr/local/include
+#  @PROJECT_INTERN_NAME@_LIBRARIES = proj
+#  @PROJECT_INTERN_NAME@_LIBRARY_DIRS = /usr/local/lib
+#  @PROJECT_INTERN_NAME@_BINARY_DIRS = /usr/local/bin
+#  @PROJECT_INTERN_NAME@_VERSION = 4.9.1 (for example)
+
+message (STATUS "Reading ${CMAKE_CURRENT_LIST_FILE}")
+# @PROJECT_INTERN_NAME@_VERSION is set by version file
+message (STATUS
+  "@PROJECT_INTERN_NAME@ configuration, version ${@PROJECT_INTERN_NAME@_VERSION}")
+
+# Tell the user project where to find our headers and libraries
+get_filename_component (_DIR ${CMAKE_CURRENT_LIST_FILE} PATH)
+get_filename_component (_ROOT "${_DIR}/@PROJECT_ROOT_DIR@" ABSOLUTE)
+set (@PROJECT_INTERN_NAME@_INCLUDE_DIRS "${_ROOT}/@INCLUDEDIR@")
+set (@PROJECT_INTERN_NAME@_LIBRARY_DIRS "${_ROOT}/@LIBDIR@")
+set (@PROJECT_INTERN_NAME@_BINARY_DIRS "${_ROOT}/@BINDIR@")
+
+set (@PROJECT_INTERN_NAME@_LIBRARIES proj)
+# Read in the exported definition of the library
+include ("${_DIR}/@PROJECT_NAME_LOWER@-targets.cmake")
+
+unset (_ROOT)
+unset (_DIR)
